--- a/_sass/_microblog.scss
+++ b/_sass/_microblog.scss
@@ -80,7 +80,7 @@
   color: #f0f0f0;
 }
 
-.dark .microblog-post-preview time, .dark .microblog-post time
+.dark .microblog-post-preview time, .dark .microblog-post time,
 .dark .microblog-content .img-caption {
   color: #aaa;
 }
